--- a/adopt.html
+++ b/adopt.html
@@ -67,7 +67,7 @@
 
 <div id="adoption-form">
 
-    <h2 id="adoption-form-title" > Adpotion Interest Form</h2>
+    <h2 id="adoption-form-title" > Adoption Interest Form</h2>
 
     <p id="form-blurb">
         Thank you for your interest in adopting with Motley Zoo! Please note you must be 21 yrs or older to apply. 
