adopt page updates

--- a/adopt.html
+++ b/adopt.html
@@ -23,13 +23,12 @@
     </header>
 
     <div>
-        <video autoplay muted  width="1244px" height= "518px" id="myVideo" loop>
+        <video autoplay muted height= "518px" id="myVideo" loop poster="Images/adopt-video-thumb.png">
             <source src="Images/Adopt Video.mp4" type="video/mp4"> </video>
 
         <h1>Adopt</h1>
 
     </div>
-
 
 <h2 id="looking-for-home-title">Looking For a Home</h2>
 
@@ -38,9 +37,9 @@
     <div id="petbox-1" class="petimg">
         <a href="https://www.petfinder.com/cat/angry-orchard-59039350/wa/redmond/motley-zoo-animal-rescue-wa433/?referrer_id=0f31ba3d-937a-471a-9902-6d50761079ab" target="_blank" id="petlink-1"> 
             <img src="Images/cat 1.jpeg" width="325px" height= "355px" alt="Photo of tabby cat sitting on by windowsill looking at camera" srcset=""  id="petimg-1" > </a>
-            <div class="petbox">
-                <p class="pet-name"> Pet Name: <span id="petname-1"> Angry Orchard </span> </p>
-                <p class="breed"> Breed: <span id="petbreed-1"> Domestic Short Hair </span> </p>
+            <div class="petimg__overlay">
+                <p class="pet-name"> Pet Name: <b> Angry Orchard </b> </p>
+                <p class="pet-breed"> Breed: <b> Domestic Short Hair </b> </p>
             </div>
     </div>
 
@@ -48,8 +47,8 @@
         <a href="https://www.petfinder.com/dog/amy-santiago-51501999/wa/redmond/motley-zoo-animal-rescue-wa433/?referrer_id=0f31ba3d-937a-471a-9902-6d50761079ab" target="_blank" id="petlink-2"> 
             <img src="Images/dog 1.jpeg" width="325px" height= "355px"  alt="Photo of golden lab staring away from camera" srcset="" id="petimg-2"> </a>
             <div class="petbox">
-                <p class="pet-name"> Pet Name: <span id="petname-2"> Amy Santiago </span> </p>
-                <p class="breed"> Breed: <span id="petbreed-2"> Labrador Retriever </span> </p>
+                <p class="pet-name"> Pet Name: <b> Amy Santiago </b> </p>
+                <p class="breed"> Breed: <b> Labrador Retriever </b> </p>
             </div>
         
     </div>
@@ -58,8 +57,8 @@
         <a href="https://www.petfinder.com/dog/cammie-miko-59296910/wa/redmond/motley-zoo-animal-rescue-wa433/?referrer_id=0f31ba3d-937a-471a-9902-6d50761079ab" target="_blank" id="petlink-3"> 
             <img src="Images/puppy 1.jpeg" width="325px" height= "355px"  alt="Photo of puppy on blankets staring at camera with one ear askew" srcset="" id="petimg-3"> </a>
             <div class="petbox">
-                <p class="pet-name"> Pet Name: <span id="petname-3"> Cammie Miko </span> </p>
-                <p class="breed"> Breed: <span id="petbreed-3"> Terrier </span> </p>
+                <p class="pet-name"> Pet Name: <b> Cammie Miko </b> </p>
+                <p class="breed"> Breed: <b> Terrier </b> </p>
             </div>
        
     </div>
