--- a/adopt.html
+++ b/adopt.html
@@ -37,18 +37,18 @@
     <div id="petbox-1" class="petimg">
         <a href="https://www.petfinder.com/cat/angry-orchard-59039350/wa/redmond/motley-zoo-animal-rescue-wa433/?referrer_id=0f31ba3d-937a-471a-9902-6d50761079ab" target="_blank" id="petlink-1"> 
             <img src="Images/cat 1.jpeg" width="325px" height= "355px" alt="Photo of tabby cat sitting on by windowsill looking at camera" srcset=""  id="petimg-1" > </a>
-            <div class="petimg__overlay">
-                <p class="pet-name"> Pet Name: <b> Angry Orchard </b> </p>
-                <p class="pet-breed"> Breed: <b> Domestic Short Hair </b> </p>
+            <div class="petimg__overlay petimg__overlay--blur" >
+                <p class="pet-name"> Pet Name: Angry Orchard </p>
+                <p class="pet-breed"> Breed: Domestic Short Hair  </p>
             </div>
     </div>
 
     <div id="petbox-2" class="petimg">
         <a href="https://www.petfinder.com/dog/amy-santiago-51501999/wa/redmond/motley-zoo-animal-rescue-wa433/?referrer_id=0f31ba3d-937a-471a-9902-6d50761079ab" target="_blank" id="petlink-2"> 
             <img src="Images/dog 1.jpeg" width="325px" height= "355px"  alt="Photo of golden lab staring away from camera" srcset="" id="petimg-2"> </a>
-            <div class="petbox">
-                <p class="pet-name"> Pet Name: <b> Amy Santiago </b> </p>
-                <p class="breed"> Breed: <b> Labrador Retriever </b> </p>
+            <div class="petimg__overlay petimg__overlay--blur">
+                <p class="pet-name"> Pet Name: Amy Santiago  </p>
+                <p class="breed"> Breed: Labrador Retriever </p>
             </div>
         
     </div>
@@ -56,12 +56,13 @@
     <div id="petbox-3" class="petimg">
         <a href="https://www.petfinder.com/dog/cammie-miko-59296910/wa/redmond/motley-zoo-animal-rescue-wa433/?referrer_id=0f31ba3d-937a-471a-9902-6d50761079ab" target="_blank" id="petlink-3"> 
             <img src="Images/puppy 1.jpeg" width="325px" height= "355px"  alt="Photo of puppy on blankets staring at camera with one ear askew" srcset="" id="petimg-3"> </a>
-            <div class="petbox">
-                <p class="pet-name"> Pet Name: <b> Cammie Miko </b> </p>
-                <p class="breed"> Breed: <b> Terrier </b> </p>
+            <div class="petimg__overlay petimg__overlay--blur">
+                <p class="pet-name"> Pet Name: Cammie Miko  </p>
+                <p class="breed"> Breed: Terrier  </p>
             </div>
        
     </div>
+    <br>
 
     <button id="see-more-button" onclick="window.location.href='https://www.petfinder.com/search/pets-for-adoption/?shelter_id%5B0%5D=WA433&sort%5B0%5D=recently_added'"> See More </button> 
     <!-- See more button links to Petfinder page:
