--- a/adopt.html
+++ b/adopt.html
@@ -23,10 +23,11 @@
     </header>
 
     <div>
+        <div id="myVideo__overlay">
         <video autoplay muted height= "518px" id="myVideo" loop poster="Images/adopt-video-thumb.png">
             <source src="Images/Adopt Video.mp4" type="video/mp4"> </video>
-
-        <h1>Adopt</h1>
+        </div>
+        <h1 id="adopt">Adopt</h1>
 
     </div>
 
@@ -60,7 +61,6 @@
                 <p class="pet-name"> Pet Name: Cammie Miko  </p>
                 <p class="breed"> Breed: Terrier  </p>
             </div>
-       
     </div>
     <br>
 
@@ -82,39 +82,53 @@
         Those under 21 can fill out the application but it must be on behalf of someone who is of age and will ultimately
         be responsible for the animal. </p>
 
-    <form action="" method="post" role="adoption_form">
+    <form action="" method="post" role="adoption_form" novalidate>
 
-        <label for= "name"> Full Name: </label>
-        <input type="text" name="name">
+        <label for= "name"> Full Name: 
+        <input type="text" name="name" id="form-name">
+    </label>
+
         <br>
 
-        <label for= "phone-num"> Phone Number: </label>
-        <input type="text" name="phone-num">
+        <label for= "phone-num"> Phone Number: 
+        <input type="text" name="phone-num" id="phone-num">
+    </label>
         <br>
 
-        <label for= "email"> Email Address: </label>
-        <input type="text" name="email">
+        <label for= "email"> Email Address: 
+        <input type="text" name="email" id="email">
+        <span class="error" aria-live="polite"></span>
+    </label>
         <br>
 
-        <label for= "age"> Age: </label>
-        <input type="text" name="age">
+        <label for= "age"> Age: 
+        <input type="text" name="age" id="age">
+    </label>
         <br>
 
-        <label for= "pet-wanted"> Name and Breed of Pet: </label>
-        <input type="text" name="pet-wanted">
+        <label for= "pet-wanted"> Name and Breed of Pet: 
+        <input type="text" name="pet-wanted" id="pet-wanted">
+    </label>
         <br>
 
-        <label for="comments"> Additional Comments: </label>
+        <label for="comments"> Additional Comments: 
         <br>
         <textarea id="comments" name="comments">
         </textarea>
+    </label>
         <br>
-        <input type='submit' value='Submit'>
-    </form>
+        <input type='submit' value='Submit' id="submitForm" onclick="message()">
 
+        <div class="message">
+            <div class="success" id="success"> Your Application Has Been Submitted!</div>
+            <div class="danger" id="danger"> Please Fill out All Fields</div>
+        </div>
+    </form>
+<br>
 
 </div>
 
+<br>
 
 <div class="footer">
     <h1 class="footer-header">Motley Zoo Animal Rescue</h1>
@@ -137,6 +151,6 @@
 
 </div>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
