adopt css updated

--- a/adopt.html
+++ b/adopt.html
@@ -27,11 +27,15 @@
         <video autoplay muted height= "518px" id="myVideo" loop poster="Images/adopt-video-thumb.png">
             <source src="Images/Adopt Video.mp4" type="video/mp4"> </video>
         </div>
+
         <h1 id="adopt">Adopt</h1>
 
     </div>
 
-<h2 id="looking-for-home-title">Looking For a Home</h2>
+    <h2 id="looking-for-home-title">Looking For a Home</h2>
+<div id="container">
+
+
 
 <div id="looking-for-home-section ">
 
@@ -71,8 +75,9 @@
 
 
 </div>
+</div>
 
-
+<div id="adoption-container">
 <div id="adoption-form">
 
     <h2 id="adoption-form-title" > Adoption Interest Form</h2>
@@ -126,6 +131,7 @@
     </form>
 <br>
 
+    </div>
 </div>
 
 <br>
