--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Motley Zoo Animal Rescue</title>
 </head>
 <body>
   <div class="container">
     <div class="logo">
-      <img src="./Capstone-Group2/Images/logo.png" alt="" width="130" />
+      <img src="Images/logo.png" alt="Motley Zoo Logo" width="130" />
       
     <nav>
         <ul>
@@ -26,7 +27,7 @@
     </div>
       </div>
       <div id="pup">
-     <img src="https://raw.githubusercontent.com/Diamanefrazier/Capstone-Group2/main/Capstone-Group2/Images/puppies.jpg" alt="puppies" height="400"  width="715">
+     <img src="https://raw.githubusercontent.com/Diamanefrazier/Capstone-Group2/main/Capstone-Group2/Images/puppies.jpg" alt="puppies" height="400" >
     </div>
   
      <div id="leftside">
@@ -38,14 +39,14 @@
      <p>Motley Zoo has a 99% live release rate. This means that while less than 1% of the animals we've rescued have died or were humanely euthanized, we have saved 99% of them! In comparison, Washington state has an approximate 90% live release rate. In all, we are doing pretty well in the northwest.<br>However in some states, live release falls to a deplorable 40%. This means in many places around our country, more than half of the animals in shelters are put to death.</p>
     <div id="section">
      <div class="grid">
-   <img src="./Capstone-Group2/Images/Nathan-Rhodes.jpg" alt="brown dog">
-   <div class="card"><img src="./Capstone-Group2/Images/cat 1.jpeg" alt="grey cat"></div>
-   <div class="card"><img src="./Capstone-Group2/Images/cat 2.jpeg" alt="black cat"></div>
-   <div class="card"><img src="./Capstone-Group2/Images/cat 3.jpg" alt="black and white cat"></div>
-   <div class="card"><img src="./Capstone-Group2/Images/dog 1.jpeg" alt="brown dog"></div>
-  <div class="card"><img src="./Capstone-Group2/Images/dog 4.jpg" alt="happy dog"></div>
-   <div class="card"><img src="./Capstone-Group2/Images/ikaika 3.jpg" alt="white dog"></div>
-  <div class="card"><img src="./Capstone-Group2/Images/kittens.jpg" alt="kittens"></div>
+   <img src="Images/Nathan-Rhodes.jpg" alt="brown dog">
+   <div class="card"><img src="Images/cat 1.jpeg" alt="grey cat"></div>
+   <div class="card"><img src="Images/cat 2.jpeg" alt="black cat"></div>
+   <div class="card"><img src="Images/cat 3.jpg" alt="black and white cat"></div>
+   <div class="card"><img src="Images/dog 1.jpeg" alt="brown dog"></div>
+  <div class="card"><img src="Images/dog 4.jpg" alt="happy dog"></div>
+   <div class="card"><img src="Images/ikaika 3.jpg" alt="white dog"></div>
+  <div class="card"><img src="Images/kittens.jpg" alt="kittens"></div>
 </div>
 </div>
     <h2>Happy Tails: Success Stories</h2>
